develop(clientsAndPartners): Fixed height on mobile.

--- a/client/src/components/ClientsAndPartners/ClientsAndPartners.css
+++ b/client/src/components/ClientsAndPartners/ClientsAndPartners.css
@@ -113,7 +113,7 @@
   }
 
   #section-clients-and-partners .container-carousel .box-card .partner-image {
-    max-width: 96px;
+    max-width: 96px !important;
   }
 
 }
@@ -146,6 +146,7 @@
 
   #section-clients-and-partners .container-carousel .box-card .partner-image {
     max-width: 80px;
+    max-height: 80px;
   }
 
   #section-clients-and-partners .container-carousel .box-card .partner-info {
